# keima

./: .env.sample  .gitignore  README.md  REQUIREMENTS.md  compose.yaml  pyproject.toml  requirements.txt
.gemini/: styleguide.md
.github/workflows/: pytest.yml  ruff.yml
app/: app.py  database.py  main.py
src/keima/: __init__.py
src/keima/backend/app_class/: app_class.py
src/keima/backend/coins/: get_coins.py  set_coins.py
src/keima/backend/database/: database.py  teams.py  tickets.py
src/keima/backend/race_result/: load_result.py  save_result.py
src/keima/backend/reward/: reward.py
src/keima/coins/: get_coins.py  save_coins.py  set_coins.py
src/keima/myexception/: backend.py
src/keima/reward/: reward.py
tests/: app.py  test_app.py  test_reward.py
tests/app/: test_buyticket_reward.py  test_set_get_coins.py  test_set_get_race_state.py
tests/backend/reward/: reward.py  test_reward.py
