[project]
name = "keima"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "popiemon", email = "kryo.over@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
